# nanobot-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  config.example.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: error.rs  main.rs  module_tests.rs  tests.rs
src/agent/: mod.rs
src/bus/: mod.rs
src/channel/: discord.rs  feishu.rs  mod.rs  telegram.rs  whatsapp.rs
src/cli/: agent.rs  gateway.rs  init.rs  mod.rs  status.rs  tool.rs
src/config/: mod.rs
src/cron/: mod.rs
src/llm/: anthropic.rs  dashscope.rs  deepseek.rs  gemini.rs  groq.rs  minimax.rs  mod.rs  moonshot.rs  openrouter.rs  vllm.rs  zhipu.rs
src/memory/: mod.rs
src/session/: mod.rs
src/tools/: file.rs  message.rs  mod.rs  shell.rs  web.rs
